# argumentation

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATIONS.md  CONTRIBUTING.md  README.md  bench_scc_b2.py  notes-af-z3-check-budget-coder-state.md  notes-graph-speedup-foreman-2026-05-12.md  pyproject.toml
bench/: README.md  asp_vs_sat.py  instance_gen.py
docs/: architecture.md  argumentation-package-boundary.md  backends.md  caf-semantics.md  examples.md  gaps.md  iccma-2025-data.md  iccma-data.md  index.md  performance-research.md  setaf.md
experiments/: 2026-05-20-aba-se-pr-asp-routing.md  2026-05-20-aba-se-pr-asp-vs-sat.md  2026-05-20-aba-se-pr-boundary-asp-stability.md  2026-05-20-aba-se-st-clingo-solver-shape.md  2026-05-20-aba-se-st-clingo-stats-option-sweep.md  2026-05-20-aba-telemetry-and-iccma-runner.md  2026-05-20-aba-timeout-pyspy-triage.md  2026-05-20-assumption-projection-route.md  2026-05-20-cadical195-sparse-narrow-engine.md  2026-05-20-completion-sat-direction-research.md  2026-05-20-completion-sat-inprocessing.md  2026-05-20-completion-sat-learned-route.md  2026-05-20-completion-support-core-reduction.md  2026-05-20-direct-asp-sparse-narrow-routing.md  2026-05-20-extended-support-nogoods.md  2026-05-20-external-claude-design-review.md  2026-05-20-glucose4-hard-row-full-profile.md  2026-05-20-greedy-stable-seeds.md  2026-05-20-ipasir-up-check-only-probe.md  2026-05-20-ipasir-up-overhead-probe.md  2026-05-20-learned-sat-coverage-refinement.md  2026-05-20-learned-sat-singleton-conflicts.md  2026-05-20-learned-sat-sparse-route.md  2026-05-20-loop-formulas-and-ranked-closure.md  2026-05-20-projected-sat-candidate-loop.md  2026-05-20-scc-local-founded-levels.md  2026-05-20-small-support-nogoods.md  2026-05-20-sparse-fixedpoint-probe-mode.md  2026-05-20-sparse-narrow-cegar-conflict-pruning.md  2026-05-20-sparse-narrow-fixedpoint-fastpath.md  2026-05-20-sparse-narrow-ipasir-check-model.md  2026-05-20-sparse-narrow-native-route.md  2026-05-20-sparse-narrow-solve-timing.md  2026-05-20-static-scc-loop-preload.md  2026-05-20-support-derived-sat-phases.md  2026-05-21-aba-se-st-direct-stable-encoding.md  2026-05-22-aba-clingo-timeout-diagnostics.md  2026-05-22-aba-se-st-defeated-out-propagation.md  2026-05-22-aba-se-st-lookahead-isolation.md  2026-05-22-aba-se-st-option-stats-resweep.md  (+31 more)
notes/: WS-O-arg-dung-extensions.md  aba-se-pr-st-paper-claims-2026-05-12.md  aba-sest-route-coder-state.md  aba-simplify-budget-coder-state.md  adversarial-dspr-remaining-eight-2026-05-02.md  bench-capon-2003-vaf-completion.md  citation-crossref-2026-04-29-scout-checkpoint.md  citation-crossref-2026-04-29.md  dg-treewidth-workstream-2026-05-01.md  docs-audit-architecture-2026-05-02.md  docs-audit-backends-2026-05-02.md  docs-audit-caf-semantics-2026-05-02.md  docs-audit-gaps-2026-05-02.md  docs-audit-iccma-2025-data-2026-05-02.md  docs-audit-iccma-data-2026-05-02.md  docs-audit-setaf-2026-05-02.md  docs-update-2026-04-26.md  ds-pr-timeouts-2026-05-02.md  encoding-preconditions-research.md  full-review-2026-04-29.md  graph-speedup-wave-a-fix.md  graph-speedup-wave-b2-scc-impl.md  (+30 more)
(+800 files in other folders)
