[project]
name = "argumentation"
version = "0.1.0"
description = "Finite formal argumentation frameworks and semantics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "ctoth" },
]
dependencies = []

[project.optional-dependencies]
z3 = [
    "z3-solver>=4.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argumentation"]

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["src"]

[tool.pytest.ini_options]
markers = [
    "unit: focused unit-level contract tests",
    "property: property-based or metamorphic tests",
    "differential: differential or oracle-comparison tests",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "pyright>=1.1.390",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "z3-solver>=4.12",
]
