[project]
name = "argumentation"
version = "0.1.0"
description = "Finite formal argumentation frameworks and semantics: Dung, ASPIC+, bipolar, partial, and revision"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "ctoth" },
]
keywords = [
    "argumentation",
    "formal-argumentation",
    "abstract-argumentation",
    "dung",
    "aspic",
    "bipolar-argumentation",
    "partial-argumentation",
    "probabilistic-argumentation",
    "qbaf",
    "df-quad",
    "gradual-semantics",
    "belief-revision",
    "nonmonotonic-reasoning",
    "knowledge-representation",
    "monte-carlo",
    "tree-decomposition",
    "z3",
    "sat",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
z3 = [
    "z3-solver>=4.12",
]

[project.urls]
Homepage = "https://github.com/ctoth/argumentation"
Repository = "https://github.com/ctoth/argumentation"
Issues = "https://github.com/ctoth/argumentation/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argumentation"]

[tool.pyright]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["src"]

[tool.pytest.ini_options]
markers = [
    "unit: focused unit-level contract tests",
    "property: property-based or metamorphic tests",
    "differential: differential or oracle-comparison tests",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "pyright>=1.1.390",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "z3-solver>=4.12",
]
